--- a/action.yml
+++ b/action.yml
@@ -23,9 +23,11 @@ runs:
       shell: bash
       run: cargo install a11ywatch_cli
     - name: Start A11yWatch Service
+      if: ${{ !env.EXTERNAL }}
       shell: bash
       run: a11ywatch start
     - name: Wait for Healthy Container
+      if: ${{ !env.EXTERNAL }}
       shell: bash
       run: |
         attempt=0
@@ -42,8 +44,13 @@ runs:
         done
     - name: Scan Website
       shell: bash
-      run: a11ywatch scan --url "${{ inputs.WEBSITE_URL }}"
+      run: |
+        if [ ${{ inputs.EXTERNAL }} ]; then
+          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" --external
+        else
+          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}"
+        fi
     - name: Stop A11yWatch Service
+      if: ${{ !env.EXTERNAL }}
       shell: bash
-      if: always()
       run: a11ywatch stop
