--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,9 +7,21 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Install Rust
+        if: steps.cache.outputs.cache-hit != 'true'
         run: curl https://sh.rustup.rs -sSf | sh -s -- -y
       - name: Install the A11yWatch CLI
+        if: steps.cache.outputs.cache-hit != 'true'
         run: cargo install a11ywatch_cli
       - name: Start A11yWatch Service
         if: ${{ !env.EXTERNAL }}
