--- a/action.yml
+++ b/action.yml
@@ -24,7 +24,19 @@ runs:
       shell: bash
       run: curl https://sh.rustup.rs -sSf | sh -s -- -y
 
+    - uses: actions/cache@v2
+      id: cache
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
     - name: Install the A11yWatch CLI
+      if: steps.cache.outputs.cache-hit != 'true'
       shell: bash
       run: cargo install a11ywatch_cli
 
@@ -56,12 +68,14 @@ runs:
       run: |
 
         if ${{ inputs.EXTERNAL }} = "true"; then
-          results=$(a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" --external)
+          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" --external > ./results.json
         else
-          results=($a11ywatch scan --url "${{ inputs.WEBSITE_URL }}")
+          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" > ./results.json
         fi
 
-        echo "::set-output name=results::${results}"
+        JSON=$(cat ./results.json)
+
+        echo "::set-output name=results::${JSON//'%'/'%25'}"
 
     - name: Stop A11yWatch Service
       if: ${{ !inputs.EXTERNAL }}
