--- a/action.yml
+++ b/action.yml
@@ -20,11 +20,24 @@ outputs:
 runs:
   using: composite
   steps:
+    - uses: actions/cache@v2
+      id: cache
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
     - name: Install Rust
+      if: steps.cache.outputs.cache-hit != 'true'
       shell: bash
       run: curl https://sh.rustup.rs -sSf | sh -s -- -y
 
     - name: Install the A11yWatch CLI
+      if: steps.cache.outputs.cache-hit != 'true'
       shell: bash
       run: cargo install a11ywatch_cli
 
@@ -56,12 +69,14 @@ runs:
       run: |
 
         if ${{ inputs.EXTERNAL }} = "true"; then
-          results=$(a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" --external)
+          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" --external > ./results.json
         else
-          results=($a11ywatch scan --url "${{ inputs.WEBSITE_URL }}")
+          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" > ./results.json
         fi
 
-        echo "::set-output name=results::${results}"
+        JSON="$(cat ./results.json)"
+
+        echo "::set-output name=results::$(echo ${JSON//'%'/'%25'})"
 
     - name: Stop A11yWatch Service
       if: ${{ !inputs.EXTERNAL }}
