--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,16 @@ runs:
       shell: bash
       run: curl https://sh.rustup.rs -sSf | sh -s -- -y
 
+    - uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
     - name: Install the A11yWatch CLI
       shell: bash
       run: cargo install a11ywatch_cli
