--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,18 @@ inputs:
     description: Use to fail the CI if the amount of issues is greater than the count.
     required: false
     default: ""
+  DISABLE_PR_STATS:
+    description: Disable the A11yWatch bot from posting on your PR.
+    required: false
+    default: ""
+  TOKEN:
+    description: The github token to use for the pr.
+    required: false
+    default: ""
+  ACTOR:
+    description: The user who triggered the pr or app.
+    required: false
+    default: ""
 outputs:
   results:
     description: "Website Results"
@@ -44,9 +56,8 @@ runs:
       run: curl https://sh.rustup.rs -sSf | sh -s -- -y
 
     - name: Install the A11yWatch CLI
-      if: steps.cache.outputs.cache-hit != 'true'
       shell: bash
-      run: cargo install a11ywatch_cli
+      run: cargo install a11ywatch_cli --force
 
     - name: Start A11yWatch Service
       if: ${{ !inputs.EXTERNAL }}
@@ -74,15 +85,20 @@ runs:
       id: a11ywatch-results-generator
       shell: bash
       run: |
-        temp_folder_results="/tmp/a11ywatch/results.json"
+        # run scan request
+        ext_var=${{ inputs.EXTERNAL }}
+        external_env=${ext_var:-"false"}
 
-        if [ ${{ inputs.EXTERNAL }} = "true" ]; then
-          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" --external > $temp_folder_results
+        if [ "$external_env" = "true" ]; then
+          # run remote scan via a11ywatch.com
+          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" --external --save
         else
-          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" > $temp_folder_results
+          a11ywatch scan --url "${{ inputs.WEBSITE_URL }}" --save
         fi
 
-        website_issues=$(jq '.website.issue | length' $temp_folder_results)
+        results_path="$(a11ywatch --find-results)"
+
+        website_issues=$(jq '.website.issue | length' $results_path)
         error_limit=${{ inputs.FAIL_ERROR_COUNT }}
         error_count=${error_limit:-0}
 
@@ -101,6 +117,42 @@ runs:
 
         echo "::set-output name=results::$(echo ${JSON//'%'/'%25'})"
         echo "::set-output name=issues::$(echo ${website_issues})"
+
+    - name: Post Stats to GitHub PR
+      shell: bash
+      if: ${{ inputs.TOKEN }}
+      run: |
+        results_path="$(a11ywatch --find-results)"
+        gh_api_url="$(a11ywatch --github-api-url)"
+
+        GH_TOKEN="${{ inputs.TOKEN }}"
+        GH_USER="${{ inputs.ACTOR }}"
+
+        pr_response=$(curl --location --request GET $gh_api_url \
+            -u $GH_USER:$GH_TOKEN)
+
+        if [ $(echo $pr_response | jq length) -eq 0 ]; then
+          echo "No PR found to update"
+        else          
+          pr_comment_url=$(echo $pr_response | jq -r ".[]._links.comments.href")
+
+          website_results=$(jq '.website.issue | length' $results_path)
+          start_body='{
+                        "body":'
+          end_body='   }'
+          
+          webpage_url=${{ inputs.WEBSITE_URL }}
+
+          body_message=$(echo "$website_results issues on $webpage_url")
+
+          body=$(echo $start_body '"'$body_message'"' $end_body)
+
+          curl --location --request POST "$pr_comment_url" \
+            -u $GH_USER:$GH_TOKEN \
+            --header 'Content-Type: application/json' \
+            --data-raw "$body"
+          
+        fi
 
     - name: Stop A11yWatch Service
       if: ${{ !inputs.EXTERNAL }}
