--- a/action.yml
+++ b/action.yml
@@ -122,42 +122,26 @@ runs:
       shell: bash
       if: ${{ inputs.TOKEN }}
       run: |
-
         GH_TOKEN="${{ inputs.TOKEN }}"
         GH_USER="${{ inputs.ACTOR }}"
-
 
         results_path="$(a11ywatch --find-results)"
         gh_api_url="$(a11ywatch --github-api-url)"
 
-        echo "api url github $gh_api_url"
-
         pr_response=$(curl --location --request GET $gh_api_url \
             -u $GH_USER:$GH_TOKEN)
-
-        echo "pr response $pr_response"
 
         if [ $(echo $pr_response | jq length) -eq 0 ]; then
           echo "No PR found to update"
         else          
           pr_comment_url=$(echo $pr_response | jq -r ".[]._links.comments.href")
 
-          website_results=$(jq '.website.issue | length' $results_path)
-          start_body='{
-                        "body":'
-          end_body='   }'
-          
-          webpage_url=${{ inputs.WEBSITE_URL }}
-
-          body_message=$(echo "$website_results issues on $webpage_url")
-
-          body=$(echo $start_body '"'$body_message'"' $end_body)
+          body="$(a11ywatch extract -p github)"
 
           curl --location --request POST "$pr_comment_url" \
             -u $GH_USER:$GH_TOKEN \
             --header 'Content-Type: application/json' \
             --data-raw "$body"
-          
         fi
 
     - name: Stop A11yWatch Service
