--- a/action.yml
+++ b/action.yml
@@ -25,8 +25,8 @@ inputs:
     description: The github token to use for the pr.
     required: false
     default: ""
-  ACTOR:
-    description: The user who triggered the pr or app.
+  USER:
+    description: The user name that performed the action.
     required: false
     default: ""
 outputs:
@@ -114,20 +114,28 @@ runs:
         fi
 
         JSON="$(cat $temp_folder_results)"
+        results_json="$(a11ywatch -r)"
 
-        echo "::set-output name=results::$(echo ${JSON//'%'/'%25'})"
+        echo "::set-output name=results::$(echo ${results_json})"
         echo "::set-output name=issues::$(echo ${website_issues})"
 
     - name: Post Stats to GitHub PR
       shell: bash
-      if: ${{ inputs.TOKEN }}
+      if: ${{ !inputs.DISABLE_PR_STATS }}
       run: |
-        GH_TOKEN="${{ inputs.TOKEN }}"
-        GH_USER="${{ inputs.ACTOR }}"
+        # post github results if pr set
+        INPUT_GH_TOKEN=${{ inputs.TOKEN }}
+        INPUT_GH_USER=${{ inputs.USER }}
+        GH_ACTION_TOKEN=${{ github.token }}
+        GH_ACTION_USER=${{ github.actor }}
+
+        GH_TOKEN="${INPUT_GH_TOKEN:GH_ACTION_TOKEN}"
+        GH_USER="${INPUT_GH_USER:GH_ACTION_USER}"
 
         results_path="$(a11ywatch --find-results)"
         gh_api_url="$(a11ywatch --github-api-url)"
 
+        # check for open pr
         pr_response=$(curl --location --request GET $gh_api_url \
             -u $GH_USER:$GH_TOKEN)
 
@@ -138,6 +146,7 @@ runs:
 
           body="$(a11ywatch extract -p github)"
 
+          # post comment to github
           curl --location --request POST "$pr_comment_url" \
             -u $GH_USER:$GH_TOKEN \
             --header 'Content-Type: application/json' \
