--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,8 +5,7 @@ jobs:
     name: End to End
     runs-on: ubuntu-20.04
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: A11yWatch website scan
         uses: ./
         with:
