--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,12 +5,10 @@ jobs:
     name: End to End
     runs-on: ubuntu-20.04
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: A11yWatch website scan
         uses: ./
         with:
           WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
           A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
-          EXTERNAL: true
           FAIL_ERROR_COUNT: 250
