--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,6 +9,6 @@ jobs:
       - name: A11yWatch website scan
         uses: ./
         with:
-          WEBSITE_URL: ${{ secrets.WEBSITE_URL }}
+          WEBSITE_URL: https://a11ywatch.com
           A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
           FAIL_ERROR_COUNT: 250
