--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: Use the A11yWatch external api hosted.
     required: false
     default: ""
+  SITE_WIDE:
+    description: Perform a site-wide scan.
+    required: false
+    default: ""
   FAIL_ERROR_COUNT:
     description: Use to fail the CI if the amount of issues is greater than the count.
     required: false
@@ -87,14 +91,24 @@ runs:
         done
 
     - name: A11yWatch Scan
-      if: ${{ !inputs.EXTERNAL }}
+      if: ${{ !inputs.EXTERNAL && !inputs.SITE_WIDE }}
       shell: bash
       run: a11ywatch scan --url ${{ inputs.WEBSITE_URL }} --save
 
     - name: A11yWatch Scan
-      if: ${{ inputs.EXTERNAL }}
+      if: ${{ inputs.EXTERNAL && !inputs.SITE_WIDE }}
       shell: bash
       run: a11ywatch scan --url ${{ inputs.WEBSITE_URL }} --external --save
+
+    - name: A11yWatch Crawl
+      if: ${{ !inputs.EXTERNAL && inputs.SITE_WIDE }}
+      shell: bash
+      run: a11ywatch crawl --url ${{ inputs.WEBSITE_URL }} --save
+
+    - name: A11yWatch Crawl
+      if: ${{ inputs.EXTERNAL && inputs.SITE_WIDE }}
+      shell: bash
+      run: a11ywatch crawl --url ${{ inputs.WEBSITE_URL }} --external --save
 
     - name: Scan Results Check
       if: ${{ inputs.EXTERNAL }}
@@ -104,7 +118,7 @@ runs:
         # get results path
         results_path="$(a11ywatch --find-results)"
 
-        website_issues=$(jq '.website.issue | length' $results_path)
+        website_issues=$(a11ywatch --results-issues)
         error_limit=${{ inputs.FAIL_ERROR_COUNT }}
         error_count=${error_limit:-0}
 
@@ -123,6 +137,7 @@ runs:
 
         echo "::set-output name=results::$(echo ${results_json})"
         echo "::set-output name=issues::$(echo ${website_issues})"
+
     - name: Post Stats to GitHub PR
       shell: bash
       if: ${{ github.event_name == 'pull_request' && !inputs.DISABLE_PR_STATS }}
@@ -134,7 +149,7 @@ runs:
 
         results_path="$(a11ywatch --find-results)"
         gh_api_url="$(a11ywatch --github-api-url)"
-        website_issues=$(jq '.website.issue | length' $results_path)
+        website_issues=$(a11ywatch --results-issues)
 
         # send pr results if issues exist
         if [ "$website_issues" -gt 0 ]; then
