--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,6 +9,6 @@ jobs:
       - name: A11yWatch website scan
         uses: ./
         with:
-          WEBSITE_URL: https://a11ywatch.com
+          WEBSITE_URL: https://www.jeffmendez.com
           FAIL_ERROR_COUNT: 250
           SITE_WIDE: true
