--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,6 +9,8 @@ jobs:
       - name: A11yWatch website scan
         uses: ./
         with:
-          WEBSITE_URL: https://www.jeffmendez.com
-          FAIL_ERROR_COUNT: 250
+          WEBSITE_URL: https://a11ywatch.com
           SITE_WIDE: true
+          FAIL_ERROR_COUNT: 1200
+          EXTERNAL: true
+          A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
