feat(crawl): add site-wide crawl option (#11)
* feat(crawl): add site-wide crawl option

* test(cli): add smaller page test for site-wide scan

* chore(action): revert website target url

* test(cli): add a11ywatch token for remote test

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,4 +10,7 @@ jobs:
         uses: ./
         with:
           WEBSITE_URL: https://a11ywatch.com
-          FAIL_ERROR_COUNT: 250
+          SITE_WIDE: true
+          FAIL_ERROR_COUNT: 1200
+          EXTERNAL: true
+          A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
